# tech_tracker

./: .gitignore  config.toml  pyproject.toml
src/tech_tracker/: __init__.py  app_persist.py  app_update.py  app_youtube.py  cli.py  config.py  downloader.py  item.py  item_diff.py  item_id.py  item_store.py  youtube_channel.py  youtube_fetch.py  youtube_rss.py  youtube_to_items.py
src/tech_tracker/app/: __init__.py  persist.py  (+3 more)
src/yt_dlp_wrapper/: cli.py
tests/: test_app_youtube_from_config.py  test_basic.py  test_cli_youtube.py  test_cli_youtube_store_writes_items.py  test_config_toml.py  test_item_diff_new_items.py  test_youtube_feed_url.py  test_youtube_rss_parse.py
tests/app/: test_app_update_youtube_new_items.py  test_app_youtube_from_config.py  test_persist_youtube_items.py  test_recommend_from_store.py  test_recommend_keyword_from_seen.py  test_recommend_markdown.py  test_recommend_multi_markdown.py  test_recommender_interface.py
tests/cli/: test_cli_fetch.py  test_cli_fetch_default_config.py  test_cli_fetch_default_store.py  test_cli_fetch_store_arg.py  test_cli_fetch_store_writes_items.py  test_cli_import.py  test_cli_modify.py  test_cli_recommend_markdown.py  test_cli_youtube.py  test_cli_youtube_default_config.py  test_cli_youtube_default_store.py  test_cli_youtube_store_arg.py  test_cli_youtube_store_writes_items.py
tests/core/: test_item_dataclass.py  test_item_diff_new_items.py  test_item_store_json.py
tests/sources/: test_youtube_channel_id_extract.py  test_youtube_feed_url.py  test_youtube_fetch_no_network.py  test_youtube_rss_parse.py
(+4 files in other folders)
