[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech-tracker"
version = "0.1.0"
description = "A tool for tracking and managing tech information"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/tech-tracker"
Repository = "https://github.com/yourusername/tech-tracker"

[project.scripts]
tech-tracker = "tech_tracker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/tech_tracker"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]